toolchain/base-python: Update specs

--- a/packages/toolchain/base-python/definition.yaml
+++ b/packages/toolchain/base-python/definition.yaml
@@ -27,6 +27,9 @@ requires:
   - name: appi
     category: dev-python
     version: '>=0'
+  - name: calver
+    category: dev-python
+    version: '>=0'
   - name: certifi
     category: dev-python
     version: '>=0'
@@ -48,10 +51,16 @@ requires:
   - name: docutils
     category: dev-python
     version: '>=0'
+  - name: editables
+    category: dev-python
+    version: '>=0'
   - name: flit_core
     category: dev-python
     version: '>=0'
   - name: gpep517
+    category: dev-python
+    version: '>=0'
+  - name: hatchling
     category: dev-python
     version: '>=0'
   - name: idna
@@ -82,6 +91,15 @@ requires:
     category: dev-python
     version: '>=0'
   - name: packaging
+    category: dev-python
+    version: '>=0'
+  - name: pathspec
+    category: dev-python
+    version: '>=0'
+  - name: pip
+    category: dev-python
+    version: '>=0'
+  - name: pluggy
     category: dev-python
     version: '>=0'
   - name: ply
@@ -151,6 +169,9 @@ requires:
     category: dev-python
     version: '>=0'
   - name: tomli
+    category: dev-python
+    version: '>=0'
+  - name: trove-classifiers
     category: dev-python
     version: '>=0'
   - name: typing-extensions
