--- a/packages/macaroni/poppler/build.yaml
+++ b/packages/macaroni/poppler/build.yaml
@@ -20,10 +20,15 @@ excludes:
 - ^/var/git/
 includes:
 {{ if eq .Values.name "poppler-qt" }}
-- ^/usr/include/poppler/qt5/.*
-- ^/usr/lib64/libpoppler-qt5.so
-- ^/usr/lib64/libpoppler-qt5.so.*
-- ^/usr/lib64/pkgconfig/poppler-qt5.pc
+- /usr$
+- /usr/include$
+- /usr/include/poppler$
+- /usr/include/poppler/qt5/.*
+- /usr/lib64$
+- /usr/lib64/libpoppler-qt5.so
+- /usr/lib64/libpoppler-qt5.so.*
+- /usr/lib64/pkgconfig$
+- /usr/lib64/pkgconfig/poppler-qt5.pc
 {{ end }}
 requires:
 # TODO: move this to race with efl to reduce compilation tasks.
