--- a/packages/atoms/base-tools/net-misc/dhcpcd/definition.yaml
+++ b/packages/atoms/base-tools/net-misc/dhcpcd/definition.yaml
@@ -1,5 +1,5 @@
 name: dhcpcd
-version: 10.0.2
+version: 10.0.5
 category: net-misc
 use_flags:
 - udev
@@ -26,4 +26,4 @@ labels:
   kit: net-kit
   original.package.name: net-misc/dhcpcd
   original.package.slot: "0"
-  original.package.version: 10.0.2
+  original.package.version: 10.0.5-r1
