app-text/poppler-qt: Bump v23.10.0+3

--- a/packages/macaroni/poppler/build.yaml
+++ b/packages/macaroni/poppler/build.yaml
@@ -23,6 +23,7 @@ includes:
 - /usr$
 - /usr/include$
 - /usr/include/poppler$
+- /usr/include/poppler/qt5$
 - /usr/include/poppler/qt5/.*
 - /usr/lib64$
 - /usr/lib64/libpoppler-qt5.so
