portage-converter: Update layer macaroni-funtoo-race2

--- a/portage-converter/layers/macaroni-funtoo-race2.yaml
+++ b/portage-converter/layers/macaroni-funtoo-race2.yaml
@@ -15,6 +15,7 @@ packages:
   - app-crypt/gnupg:0
   - app-crypt/gpgme:1
   - app-crypt/libb2:0
+  - app-crypt/p11-kit:0
   - app-crypt/pinentry:0
   - app-crypt/rhash:0
   - app-editors/nano:0
@@ -70,6 +71,7 @@ packages:
   - dev-python/PySocks:0
   - dev-python/alabaster:0
   - dev-python/appi:0
+  - dev-python/calver:0
   - dev-python/certifi:0
   - dev-python/cffi:0
   - dev-python/chardet:0
@@ -78,8 +80,10 @@ packages:
   - dev-python/cryptography:0
   - dev-python/cython:0
   - dev-python/docutils:0
+  - dev-python/editables:0
   - dev-python/flit_core:0
   - dev-python/gpep517:0
+  - dev-python/hatchling:0
   - dev-python/idna:0
   - dev-python/imagesize:0
   - dev-python/importlib_metadata:0
@@ -88,7 +92,11 @@ packages:
   - dev-python/jinja:0
   - dev-python/markupsafe:0
   - dev-python/mwparserfromhell:0
+  - dev-python/namespace-sphinxcontrib:0
   - dev-python/packaging:0
+  - dev-python/pathspec:0
+  - dev-python/pip:0
+  - dev-python/pluggy:0
   - dev-python/ply:0
   - dev-python/pycparser:0
   - dev-python/pyelftools:0
@@ -108,11 +116,13 @@ packages:
   - dev-python/sphinxcontrib-applehelp:0
   - dev-python/sphinxcontrib-devhelp:0
   - dev-python/sphinxcontrib-htmlhelp:0
+  - dev-python/sphinxcontrib-jquery:0
   - dev-python/sphinxcontrib-jsmath:0
   - dev-python/sphinxcontrib-qthelp:0
   - dev-python/sphinxcontrib-serializinghtml:0
   - dev-python/toml:0
   - dev-python/tomli:0
+  - dev-python/trove-classifiers:0
   - dev-python/typing-extensions:0
   - dev-python/urllib3:0
   - dev-python/wheel:0
@@ -162,7 +172,7 @@ packages:
   - sys-devel/autoconf:2.69
   - sys-devel/automake-wrapper:0
   - sys-devel/automake:1.16
-  - sys-devel/binutils:2.36
+  - sys-devel/binutils:2.39
   - sys-devel/gcc-config:0
   - sys-devel/gcc:11.3.0
   - sys-devel/gettext:0
