--- a/packages/atoms/base-kde5/kde-apps-5/okular/build.yaml
+++ b/packages/atoms/base-kde5/kde-apps-5/okular/build.yaml
@@ -2,7 +2,10 @@ prelude:
 # We have poppler splitted. Ignoring this check
 - >-
   sed -e 's|app-text/poppler\[qt5\]|app-text/poppler|g' -i
-  /var/git/meta-repo/kits/kde-kit/kde-apps/okular/okular-22.08.1.ebuild
+  /var/git/meta-repo/kits/kde-kit/kde-apps/okular/okular-22.08.1.ebuild &&
+  luet repo update &&
+  luet i -y poppler-qt &&
+  luet cleanup --purge-repos
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
