dev-python/brotlipy: Requires app-arch/brotli for build

--- a/packages/atoms-extra/dev/dev-python/brotlipy/build.yaml
+++ b/packages/atoms-extra/dev/dev-python/brotlipy/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: python-cffi
+- name: brotli
   version: '>=0'
-  category: virtual
+  category: app-arch
