--- a/packages/atoms-extra/server/www-servers/caddy/definition.yaml
+++ b/packages/atoms-extra/server/www-servers/caddy/definition.yaml
@@ -1,5 +1,5 @@
 name: caddy
-version: 2.7.4
+version: 2.7.5
 category: www-servers
 use_flags:
 - filecaps
@@ -22,4 +22,4 @@ labels:
   kit: core-server-kit
   original.package.name: www-servers/caddy
   original.package.slot: "0"
-  original.package.version: 2.7.4-r1
+  original.package.version: 2.7.5
