--- a/packages/atoms-extra/server/app-emulation/lxd/definition.yaml
+++ b/packages/atoms-extra/server/app-emulation/lxd/definition.yaml
@@ -1,5 +1,5 @@
 name: lxd
-version: "5.11"
+version: "5.18"
 category: app-emulation
 use_flags:
 - nls
@@ -62,4 +62,4 @@ labels:
   kit: geaaru-kit
   original.package.name: app-emulation/lxd
   original.package.slot: "0"
-  original.package.version: "5.11"
+  original.package.version: 5.18-r1
