seed/funtoo-kit-geaaru: Bump v.0.20231125+1

--- a/packages/seeds/funtoo-kit-geaaru/definition.yaml
+++ b/packages/seeds/funtoo-kit-geaaru/definition.yaml
@@ -1,7 +1,7 @@
 name: funtoo-kit-geaaru
-version: "0.20231125"
+version: "0.20231125+1"
 category: seed
 labels:
   repo: https://github.com/geaaru/geaaru_overlay.git
   repo_branch: funtoo
-  repo_hash: f0f86cca8ec86d71f784bc9d4a26598064cfd811
+  repo_hash: 8c26874d160cadf561f962387b090aa5a18a26b0
