--- a/packages/toolchain/extra-kits/geaaru-kit/definition.yaml
+++ b/packages/toolchain/extra-kits/geaaru-kit/definition.yaml
@@ -1,7 +1,7 @@
-category: "toolchain"
-name: "meta-geaaru-kit"
-version: "0.20231125+1"
-description: "Metadata package of the geaaru overlay"
+name: meta-geaaru-kit
+version: 0.20231125+2
+category: toolchain
+description: Metadata package of the geaaru overlay
 labels:
-  repo: "https://github.com/geaaru/geaaru_overlay.git"
-  repo_branch: "funtoo"
+  repo: https://github.com/geaaru/geaaru_overlay.git
+  repo_branch: funtoo
