seed/funtoo-kit-geaaru: Bump v.0.20231125+2

--- a/packages/seeds/funtoo-kit-geaaru/definition.yaml
+++ b/packages/seeds/funtoo-kit-geaaru/definition.yaml
@@ -1,5 +1,5 @@
 name: funtoo-kit-geaaru
-version: "0.20231125+1"
+version: 0.20231125+2
 category: seed
 labels:
   repo: https://github.com/geaaru/geaaru_overlay.git
