seed/funtoo-kit-geaaru: Bump v.0.20231125

--- a/packages/seeds/funtoo-kit-geaaru/definition.yaml
+++ b/packages/seeds/funtoo-kit-geaaru/definition.yaml
@@ -1,7 +1,7 @@
 category: "seed"
 name: "funtoo-kit-geaaru"
-version: "0.20231103+1"
+version: "0.20231125"
 labels:
   repo: "https://github.com/geaaru/geaaru_overlay.git"
-  repo_hash: "e23e2e7916f109746cf9de96f30ecf5012e95d47"
+  repo_hash: "74974136c611f7fd61523a288532c800917f6e3a"
   repo_branch: "funtoo"
