www-servers/caddy: Update description

--- a/packages/atoms-extra/server/www-servers/caddy/definition.yaml
+++ b/packages/atoms-extra/server/www-servers/caddy/definition.yaml
@@ -10,7 +10,8 @@ annotations:
       - ^/usr/include/
       portage:
       - ^/var/db/pkg/
-description: Fast, cross-platform HTTP/2 web server with automatic HTTPS
+description: Fast and extensible multi-platform HTTP/1-2-3 web server with automatic
+  HTTPS
 uri:
 - https://caddyserver.com/ https://github.com/caddyserver/caddy
 license: Apache-2.0 BSD ECL-2.0 MIT
