--- a/packages/atoms-extra/server/sys-fs-3/fuse/definition.yaml
+++ b/packages/atoms-extra/server/sys-fs-3/fuse/definition.yaml
@@ -20,11 +20,11 @@ uri:
 license: GPL-2 LGPL-2.1
 labels:
   BDEPEND: '>=dev-util/meson-0.48.2 >=dev-util/ninja-1.7.2 virtual/pkgconfig'
-  DEPEND: virtual/pkgconfig test? ( || ( dev-lang/python:3.10 dev-lang/python:3.8
-    dev-lang/python:3.9 dev-lang/python:3.7 ) || ( ( dev-lang/python:3.10 dev-python/pytest[python_targets_python3_10(-),python_single_target_python3_10(+)]
-    ) ( dev-lang/python:3.8 dev-python/pytest[python_targets_python3_8(-),python_single_target_python3_8(+)]
+  DEPEND: virtual/pkgconfig test? ( || ( dev-lang/python:3.8 dev-lang/python:3.9 dev-lang/python:3.7
+    dev-lang/python:3.10 ) || ( ( dev-lang/python:3.8 dev-python/pytest[python_targets_python3_8(-),python_single_target_python3_8(+)]
     ) ( dev-lang/python:3.9 dev-python/pytest[python_targets_python3_9(-),python_single_target_python3_9(+)]
     ) ( dev-lang/python:3.7 dev-python/pytest[python_targets_python3_7(-),python_single_target_python3_7(+)]
+    ) ( dev-lang/python:3.10 dev-python/pytest[python_targets_python3_10(-),python_single_target_python3_10(+)]
     ) ) )
   IUSE: test abi_x86_32 abi_x86_64 abi_x86_x32 abi_mips_n32 abi_mips_n64 abi_mips_o32
     abi_s390_32 abi_s390_64
