--- a/packages/atoms-extra/server/dev-python/oauthlib/build.yaml
+++ b/packages/atoms-extra/server/dev-python/oauthlib/build.yaml
@@ -28,6 +28,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: jsonpatch
+- name: configobj
   version: '>=0'
   category: dev-python
