dev-python/virtualenv: Bump v.20.24.7

--- a/packages/atoms-extra/server/dev-python/virtualenv/build.yaml
+++ b/packages/atoms-extra/server/dev-python/virtualenv/build.yaml
@@ -28,6 +28,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: lxcfs
+- name: macaroni-funtoo-race7
   version: '>=0'
-  category: sys-fs
+  category: seed
