app-emulation/docker-cli: Update specs

--- a/packages/atoms-extra/server/app-emulation/docker-cli/definition.yaml
+++ b/packages/atoms-extra/server/app-emulation/docker-cli/definition.yaml
@@ -8,9 +8,9 @@ annotations:
       - ^/usr/include/
       portage:
       - ^/var/db/pkg/
-description: the command line binary for docker
+description: The command-line interface for Docker
 uri:
-- https://www.docker.com/
+- https://www.docker.com/ https://github.com/docker/cli
 license: Apache-2.0
 labels:
   BDEPEND: '>=dev-lang/go-1.19.0 dev-go/go-md2man >=dev-lang/go-1.10'
