--- a/packages/atoms-extra/server/app-emulation/lxc/definition.yaml
+++ b/packages/atoms-extra/server/app-emulation/lxc/definition.yaml
@@ -38,8 +38,8 @@ uri:
 - https://linuxcontainers.org/ https://github.com/lxc/lxc
 license: GPL-2 LGPL-2.1 LGPL-3
 labels:
-  BDEPEND: virtual/pkgconfig =dev-lang/python-3* dev-python/virtualenv man? ( app-text/docbook2X
-    ) >=dev-util/meson-0.48.2 >=dev-util/ninja-1.7.2 virtual/pkgconfig
+  BDEPEND: virtual/pkgconfig =dev-lang/python-3* man? ( app-text/docbook2X ) >=dev-util/meson-0.48.2
+    >=dev-util/ninja-1.7.2 virtual/pkgconfig
   DEPEND: sys-libs/libcap apparmor? ( sys-libs/libapparmor ) caps? ( static? ( sys-libs/libcap[static-libs]
     ) !static? ( sys-libs/libcap ) ) io-uring? ( >=sys-libs/liburing-2:= ) pam? (
     sys-libs/pam ) seccomp? ( sys-libs/libseccomp ) selinux? ( sys-libs/libselinux
@@ -52,7 +52,7 @@ labels:
     sys-libs/pam ) seccomp? ( sys-libs/libseccomp ) selinux? ( sys-libs/libselinux
     ) ssl? ( dev-libs/openssl:0= ) systemd? ( sys-apps/systemd:= )
   emerge.packages: app-emulation/lxc
-  kit: core-kit
+  kit: geaaru-kit
   original.package.name: app-emulation/lxc
   original.package.slot: "0"
   original.package.version: 5.0.3
