--- a/packages/atoms-extra/server/dev-db-13/postgresql/build.yaml
+++ b/packages/atoms-extra/server/dev-db-13/postgresql/build.yaml
@@ -28,6 +28,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: talloc
+- name: unixODBC
   version: '>=0'
-  category: sys-libs
+  category: dev-db
