atoms-extra/server: Review build order

--- a/packages/atoms-extra/server/app-emulation/lxc/build.yaml
+++ b/packages/atoms-extra/server/app-emulation/lxc/build.yaml
@@ -6,13 +6,6 @@ env:
 - LUET_PORTAGE_PKGFILES=1
 - FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox"
 prelude:
-# Temporary fix for meson until the new meta-repo package will be available
-- >-
-  sed -e 's/^RDEPEND=.*/RDEPEND=""/g' -i
-  /var/git/meta-repo/kits/core-kit/sys-apps/baselayout/baselayout-*.ebuild &&
-  sed '/meson/d' -i
-  /var/git/meta-repo/kits/core-kit/profiles/package.mask/01-funtoo &&
-  emerge =dev-util/meson-0.63.1 -j
 - |
   eval 'mkdir -p /var/cache/portage/distfiles || true' && \
   chown portage:portage -R /var/cache/portage/ && \
@@ -35,6 +28,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: virtualenv
+- name: lxcfs
   version: '>=0'
-  category: dev-python
+  category: sys-fs
