--- a/packages/atoms-extra/server/dev-db/unixODBC/build.yaml
+++ b/packages/atoms-extra/server/dev-db/unixODBC/build.yaml
@@ -28,6 +28,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: ossp-uuid
+- name: libbson
   version: '>=0'
   category: dev-libs
