--- a/packages/atoms-extra/server/dev-libs/gobject-introspection/build.yaml
+++ b/packages/atoms-extra/server/dev-libs/gobject-introspection/build.yaml
@@ -28,6 +28,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: gobject-introspection-common
+- name: elogind
   version: '>=0'
-  category: dev-libs
+  category: sys-auth
