--- a/packages/atoms-extra/server/dev-libs/mongo-c-driver/build.yaml
+++ b/packages/atoms-extra/server/dev-libs/mongo-c-driver/build.yaml
@@ -28,6 +28,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: unixODBC
+- name: json-c
   version: '>=0'
-  category: dev-db
+  category: dev-libs
