--- a/packages/atoms-extra/server/dev-util/glib-utils/build.yaml
+++ b/packages/atoms-extra/server/dev-util/glib-utils/build.yaml
@@ -28,6 +28,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: elogind
+- name: gobject-introspection
   version: '>=0'
-  category: sys-auth
+  category: dev-libs
