--- a/packages/atoms-extra/server/sys-auth/polkit/build.yaml
+++ b/packages/atoms-extra/server/sys-auth/polkit/build.yaml
@@ -28,6 +28,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: duktape
+- name: glib-utils
   version: '>=0'
-  category: dev-lang
+  category: dev-util
