--- a/packages/atoms-extra/server/sys-fs/cryptsetup/build.yaml
+++ b/packages/atoms-extra/server/sys-fs/cryptsetup/build.yaml
@@ -28,6 +28,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: asciidoctor
+- name: json-c
   version: '>=0'
-  category: app-text
+  category: dev-libs
