--- a/packages/atoms-extra/server/sys-kernel/dummy-sources/build.yaml
+++ b/packages/atoms-extra/server/sys-kernel/dummy-sources/build.yaml
@@ -28,6 +28,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: libndp
+- name: macaroni-funtoo-race7
   version: '>=0'
-  category: net-libs
+  category: seed
