--- a/packages/atoms-extra/server/sys-process/audit/build.yaml
+++ b/packages/atoms-extra/server/sys-process/audit/build.yaml
@@ -28,6 +28,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: gobject-introspection
+- name: gobject-introspection-common
   version: '>=0'
   category: dev-libs
