--- a/packages/atoms-extra/server/app-crypt/argon2/build.yaml
+++ b/packages/atoms-extra/server/app-crypt/argon2/build.yaml
@@ -28,6 +28,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: json-c
+- name: mysql-connector-c
   version: '>=0'
-  category: dev-libs
+  category: dev-db
