--- a/packages/atoms-extra/server/dev-db/libiodbc/build.yaml
+++ b/packages/atoms-extra/server/dev-db/libiodbc/build.yaml
@@ -28,6 +28,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: jemalloc
+- name: snappy
   version: '>=0'
-  category: dev-libs
+  category: app-arch
