--- a/packages/atoms-extra/server/dev-lang/duktape/build.yaml
+++ b/packages/atoms-extra/server/dev-lang/duktape/build.yaml
@@ -28,6 +28,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: glib-utils
+- name: audit
   version: '>=0'
-  category: dev-util
+  category: sys-process
