--- a/packages/atoms-extra/server/dev-libs/jemalloc/build.yaml
+++ b/packages/atoms-extra/server/dev-libs/jemalloc/build.yaml
@@ -28,6 +28,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: snappy
+- name: macaroni-funtoo-race7
   version: '>=0'
-  category: app-arch
+  category: seed
