--- a/packages/atoms-extra/server/dev-libs/ossp-uuid/build.yaml
+++ b/packages/atoms-extra/server/dev-libs/ossp-uuid/build.yaml
@@ -28,6 +28,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: libbson
+- name: libpwquality
   version: '>=0'
   category: dev-libs
