--- a/packages/atoms-extra/server/net-dialup/freeradius/build.yaml
+++ b/packages/atoms-extra/server/net-dialup/freeradius/build.yaml
@@ -28,6 +28,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: json-c
+- name: talloc
   version: '>=0'
-  category: dev-libs
+  category: sys-libs
