--- a/packages/atoms-extra/server/sys-auth/elogind/build.yaml
+++ b/packages/atoms-extra/server/sys-auth/elogind/build.yaml
@@ -30,6 +30,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: audit
+- name: duktape
   version: '>=0'
-  category: sys-process
+  category: dev-lang
