toolchain/base-kde5: Update rdeps

--- a/packages/toolchain/base-kde5/definition.yaml
+++ b/packages/toolchain/base-kde5/definition.yaml
@@ -51,6 +51,9 @@ requires:
   - name: kamera
     category: kde-apps-5
     version: '>=0'
+  - name: kateprivate
+    category: kde-apps-5
+    version: '>=0'
   - name: kcalc
     category: kde-apps-5
     version: '>=0'
@@ -103,6 +106,12 @@ requires:
     category: kde-apps-5
     version: '>=0'
   - name: ksanecore
+    category: kde-apps-5
+    version: '>=0'
+  - name: kwalletmanager
+    category: kde-apps-5
+    version: '>=0'
+  - name: kwrite
     category: kde-apps-5
     version: '>=0'
   - name: libkcompactdisc
@@ -162,6 +171,12 @@ requires:
   - name: kjs
     category: kde-frameworks-5
     version: '>=0'
+  - name: kplotting
+    category: kde-frameworks-5
+    version: '>=0'
+  - name: kross
+    category: kde-frameworks-5
+    version: '>=0'
   - name: modemmanager-qt
     category: kde-frameworks-5
     version: '>=0'
@@ -169,6 +184,9 @@ requires:
     category: kde-frameworks-5
     version: '>=0'
   - name: qqc2-desktop-style
+    category: kde-frameworks-5
+    version: '>=0'
+  - name: syndication
     category: kde-frameworks-5
     version: '>=0'
   - name: kio-gdrive
@@ -201,6 +219,9 @@ requires:
   - name: konversation
     category: net-irc-5
     version: '>=0'
+  - name: libktorrent
+    category: net-libs-5
+    version: '>=0'
   - name: libmediawiki
     category: net-libs-5
     version: '>=0'
@@ -221,6 +242,9 @@ requires:
     version: '>=0'
   - name: signond
     category: net-libs
+    version: '>=0'
+  - name: ktorrent
+    category: net-p2p-5
     version: '>=0'
   - name: xsettingsd
     category: x11-misc
