kde-plasma-5/powerdevil: Bump v.5.25.5+1

--- a/packages/atoms/base-kde6/kde-plasma-5/powerdevil/definition.yaml
+++ b/packages/atoms/base-kde6/kde-plasma-5/powerdevil/definition.yaml
@@ -1,8 +1,8 @@
 name: powerdevil
-version: 5.25.5
+version: 5.25.5+1
 category: kde-plasma-5
 use_flags:
-- brightness-control
+- -brightness-control
 - caps
 - handbook
 - wireless
