atoms/base-kde6: Review build order

--- a/packages/atoms/base-kde6/app-crypt/tpm2-tss/build.yaml
+++ b/packages/atoms/base-kde6/app-crypt/tpm2-tss/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: libftdi
+- name: pefile
   version: '>=0'
-  category: dev-embedded-1
+  category: dev-python
