--- a/packages/atoms/base-kde6/sys-apps/fwupd-efi/build.yaml
+++ b/packages/atoms/base-kde6/sys-apps/fwupd-efi/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: libxmlb
+- name: flashrom
   version: '>=0'
-  category: dev-libs
+  category: sys-apps
