--- a/packages/atoms/base-kde6/sys-libs/libsmbios/build.yaml
+++ b/packages/atoms/base-kde6/sys-libs/libsmbios/build.yaml
@@ -24,6 +24,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: flashrom
+- name: fwupd-efi
   version: '>=0'
   category: sys-apps
