--- a/packages/atoms/base-gtk2/dev-libs/libgusb/definition.yaml
+++ b/packages/atoms/base-gtk2/dev-libs/libgusb/definition.yaml
@@ -1,5 +1,5 @@
 name: libgusb
-version: 0.3.0+3
+version: 0.3.5
 category: dev-libs
 use_flags:
 - introspection
@@ -37,4 +37,4 @@ labels:
   kit: gnome-kit
   original.package.name: dev-libs/libgusb
   original.package.slot: "0"
-  original.package.version: 0.3.0
+  original.package.version: 0.3.5
