sys-apps/fwupd: Bump v.1.7.7+1

--- a/packages/atoms/base-kde6/sys-apps/fwupd/build.yaml
+++ b/packages/atoms/base-kde6/sys-apps/fwupd/build.yaml
@@ -1,4 +1,8 @@
 prelude:
+- >-
+  luet repo update &&
+  luet upgrade -y &&
+  luet cleanup --purge-repos
 - |-
   export FEATURES="-sandbox -usersandbox -ipc-sandbox -pid-sandbox -network-sandbox" && \
   export JOBS={{ ( index .Values.labels "jobs" ) | default "3" }} && \
@@ -24,6 +28,6 @@ excludes:
 - ^/var/cache/portage/
 - ^/var/git/
 requires:
-- name: libsmbios
+- name: libmbim
   version: '>=0'
-  category: sys-libs
+  category: net-libs
