--- a/packages/atoms/base-kde6/sys-apps/fwupd/definition.yaml
+++ b/packages/atoms/base-kde6/sys-apps/fwupd/definition.yaml
@@ -1,5 +1,5 @@
 name: fwupd
-version: 1.7.7
+version: 1.7.7+1
 category: sys-apps
 use_flags:
 - -gtk-doc
@@ -74,6 +74,9 @@ requires:
 - name: libsmbios
   version: '>=0'
   category: sys-libs
+- name: libmbim
+  version: '>=0'
+  category: net-libs
 annotations:
   subsets:
     rules:
