kde-plasma-5/kinfocenter: Bump v.5.25.5+2

--- a/packages/atoms/base-kde6/kde-plasma-5/kinfocenter/definition.yaml
+++ b/packages/atoms/base-kde6/kde-plasma-5/kinfocenter/definition.yaml
@@ -1,5 +1,5 @@
 name: kinfocenter
-version: 5.25.5+1
+version: 5.25.5+2
 category: kde-plasma-5
 use_flags:
 - -gles2-only
@@ -68,4 +68,4 @@ labels:
   kit: kde-kit
   original.package.name: kde-plasma/kinfocenter
   original.package.slot: "5"
-  original.package.version: 5.25.5
+  original.package.version: 5.25.5-r1
