portage-converter/base-kde6: Add kde-misc/latte-dock

--- a/portage-converter/base-kde6.yaml
+++ b/portage-converter/base-kde6.yaml
@@ -245,6 +245,10 @@ artefacts:
   packages:
     - sys-apps/fwupd
 
+- tree: packages/atoms/base-kde6
+  packages:
+    - kde-misc/latte-dock
+
 include_layers:
 - layers/macaroni-funtoo-race20.yaml
 
