seed/funtoo-kit-geaaru: Bump v.0.20231205+1

--- a/packages/seeds/funtoo-kit-geaaru/definition.yaml
+++ b/packages/seeds/funtoo-kit-geaaru/definition.yaml
@@ -1,7 +1,7 @@
 name: funtoo-kit-geaaru
-version: "0.20231205"
+version: "0.20231205+1"
 category: seed
 labels:
   repo: https://github.com/geaaru/geaaru_overlay.git
   repo_branch: funtoo
-  repo_hash: 6a722d4904d07d8880344a8e11f67ad79c053ea1
+  repo_hash: 45ac9dae76ed8024fa72dc8be7f08a5003c4e651
