kde-plasma-5/powerdevil: Bump v.5.25.5+2

--- a/packages/atoms/base-kde6/kde-plasma-5/powerdevil/definition.yaml
+++ b/packages/atoms/base-kde6/kde-plasma-5/powerdevil/definition.yaml
@@ -1,12 +1,15 @@
 name: powerdevil
-version: 5.25.5+1
+version: 5.25.5+2
 category: kde-plasma-5
 use_flags:
-- -brightness-control
+- brightness-control
 - caps
 - handbook
 - wireless
 requires:
+- name: ddcutil
+  version: '>=0'
+  category: app-misc
 - name: bluez-qt
   version: '>=0'
   category: kde-frameworks-5
