seed/macaroni-funtoo-race20: Bump v.0.20231126+2

--- a/packages/seeds/macaroni-funtoo-race20/build.yaml
+++ b/packages/seeds/macaroni-funtoo-race20/build.yaml
@@ -101,6 +101,7 @@ steps:
   toolchain/x11-misc2
   toolchain/desktop2
   toolchain/base-kde5
+  toolchain/power
   toolchain/office
   &&
   luet cleanup &&
