toolchain/base-kde6: Bump v.1

--- a/packages/toolchain/base-kde6/definition.yaml
+++ b/packages/toolchain/base-kde6/definition.yaml
@@ -12,6 +12,9 @@ requires:
   - name: translate-shell
     category: app-i18n
     version: '>=0'
+  - name: ddcutil
+    category: app-misc
+    version: '>=0'
   - name: rlwrap
     category: app-misc
     version: '>=0'
@@ -25,6 +28,9 @@ requires:
     category: dev-libs-5
     version: '>=0'
   - name: crypto++
+    category: dev-libs
+    version: '>=0'
+  - name: hidapi
     category: dev-libs
     version: '>=0'
   - name: libjcat
@@ -254,6 +260,9 @@ requires:
     version: '>=0'
   - name: kdav
     category: kde-frameworks-5
+    version: '>=0'
+  - name: latte-dock
+    category: kde-misc
     version: '>=0'
   - name: breeze-grub
     category: kde-plasma-5
