portage-converter/kits-specs-map.yaml: Add base-kde5, base-kde6

--- a/portage-converter/kits-specs-map.yaml
+++ b/portage-converter/kits-specs-map.yaml
@@ -713,3 +713,15 @@ seeds:
 
       - file: power.yaml
         dir: power
+
+  - name: macaroni-funtoo-race19
+    prefix: packages/atoms
+    specs:
+      - file: base-kde5.yaml
+        dir: base-kde5
+
+  - name: macaroni-funtoo-race20
+    prefix: packages/atoms
+    specs:
+      - file: base-kde6.yaml
+        dir: base-kde6
