iso/funtoo-kde-testing: Add new packages

--- a/iso/funtoo-kde-testing.yaml
+++ b/iso/funtoo-kde-testing.yaml
@@ -15,6 +15,7 @@ packages:
   - system/macaroni-funtoo-calamares
   - macaroni/whip-catalog
   - macaroni/skel-phoenix
+  - macaroni/skel-phoenix-kde
   - macaroni/pageant
 
   - virtual/sh
@@ -96,6 +97,8 @@ packages:
   - x11-drivers/xf86-input-wacom
   - x11-drivers/xf86-input-keyboard
   - x11-drivers/xf86-input-evdev
+
+  - openssh
 
   # KDE stuff
 
