sys-apps/util-linux: Break cycles

--- a/packages/atoms/base/sys-apps/util-linux/definition.yaml
+++ b/packages/atoms/base/sys-apps/util-linux/definition.yaml
@@ -25,10 +25,19 @@ use_flags:
 - python_targets_python3_9
 - readline
 requires:
+- name: python-exec
+  version: '>=0'
+  category: dev-lang-2
 - name: libcap-ng
   version: '>=0'
   category: sys-libs
 - name: pam
+  version: '>=0'
+  category: sys-libs
+- name: readline
+  version: '>=0'
+  category: sys-libs
+- name: zlib
   version: '>=0'
   category: sys-libs
 - name: libc
